@@ -1,3 +1,7 @@
+Sun Sep 30 21:51:35 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>
+
+	* decode.c (print_area): Fix comment.
+
 Wed Aug 15 14:22:46 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>
 
 	* decaof.h (FILENAMELEN, PATHNAMELEN, Date): Remove.
